feat: login page base design

--- a/src/app/components/input/input.component.scss
+++ b/src/app/components/input/input.component.scss
@@ -5,7 +5,7 @@ input.custom-input {
   padding: 10px 10px;
   border-radius: calc(0.5rem - 2px);
   line-height: 1.25rem;
-  width: 100%;
+  width: -webkit-fill-available;
   &:focus {
     outline: none;
   }
