fix: form control name access

--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -2,5 +2,5 @@
   [type]="type"
   [placeholder]="placeholder"
   class="custom-input"
-  [formControl]="formControl"
+  (input)="onInput($event)"
 />
